--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Happy Travels - Your Trusted Travel Partner in India</title>
-    <link rel="stylesheet" href="/src/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
   </head>
   <body>
