--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>Happy Travels - Your Trusted Travel Partner in India</title>
+    <title>Happy Travels - Your Trusted Travel Partner in Tirupati</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
         <div class="hero-overlay">
           <div class="hero-content">
             <h1>Happy Travels</h1>
-            <p>Your Trusted Travel Partner in India</p>
+            <p>Your Trusted Travel Partner in Tirupati</p>
           </div>
         </div>
       </div>
@@ -43,8 +43,8 @@
             <h2>Premium Vehicle Fleet</h2>
           </div>
           <p>
-            Experience unparalleled comfort with our meticulously maintained fleet of luxury vehicles. 
-            From premium tempo travelers to executive cars, we cater to both intimate groups and large families. 
+            Experience unparalleled comfort with our well maintained fleet of luxury vehicles. 
+            From premium tempo travelers to cars, we cater to both intimate groups and large families. 
             Each vehicle is equipped with modern amenities, ensuring your journey is as memorable as your destination.
           </p>
         </div>
@@ -55,8 +55,7 @@
             <i data-lucide="home"></i>
             <h2>Authentic Homestays</h2>
           </div>
-          <p>
-            Discover the true essence of Indian hospitality through our carefully curated homestays. 
+          <p> 
             We pride ourselves in offering budget-friendly accommodations that don't compromise on comfort or authenticity. 
             Immerse yourself in local culture while enjoying modern amenities in our welcoming homestay properties.
           </p>
@@ -72,15 +71,15 @@
             <div class="contact-item">
               <i data-lucide="map-pin"></i>
               <p>
-                123 Tourism Road, Kerala Tourism Hub<br>
-                Kochi, Kerala - 682001
+                 Deekshith K. 
+                 Pullavanigunta, Renigunta Road, Tirupati - 517501 
+				         (Opp Royal Enfield Show Room)
               </p>
             </div>
             <div class="contact-item">
               <i data-lucide="phone"></i>
               <p>
-                +91 98765 43210<br>
-                +91 98765 43211
+                +91-888575737
               </p>
             </div>
           </div>
@@ -96,4 +95,4 @@
       lucide.createIcons();
     </script>
   </body>
-</html>
+</html> 
