--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="hero">
         <div class="hero-overlay">
           <div class="hero-content">
-            <h1>Happy Travels</h1>
-            <p>Your Trusted Travel Partner in Tirupati</p>
+            <h1> Tirupati Happy Travels</h1>
+            <p>Your Trusted Travel Partner</p>
           </div>
         </div>
       </div>
