--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title><i class="fa-solid fa-van-shuttle"></i>Tirupati Happy Travels</title>
+	  <head>
+		  <title>Tirupati Happy Travels</title>
+		  <link rel="icon" href="van-icon.png" type="image/png">
+	  </head>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
