--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	  <head>
-		  <title>Tirupati Happy Travels</title>
-		  <link rel="icon" href="van-icon.png" type="image/png">
+		  <i class="fa-solid fa-van-shuttle"><title>Tirupati Happy Travels</title>
 	  </head>
     <link rel="stylesheet" href="styles.css" />
     <script src="https://unpkg.com/lucide@latest"></script>
