--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <!-- Navigation Header -->
       <nav class="nav-header">
         <div class="nav-container">
-          <a href="#" class="nav-logo">Happy Travels</a>
+          <a href="#" class="nav-logo">Tirupati Happy Travels</a>
           <ul class="nav-links">
             <li><a href="#vehicles">Vehicles</a></li>
             <li><a href="#homestays">Homestays</a></li>
