--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <i data-lucide="car"></i>
             <h2>Premium Vehicle Fleet</h2>
           </div>
-          <p>
+          <p class="para">
             Experience unparalleled comfort with our well maintained fleet of luxury vehicles. 
             From premium tempo travelers to cars, we cater to both intimate groups and large families. 
             Each vehicle is equipped with modern amenities, ensuring your journey is as memorable as your destination.
@@ -56,7 +56,7 @@
             <i data-lucide="home"></i>
             <h2>Authentic Homestays</h2>
           </div>
-          <p> 
+          <p class="para"> 
             We pride ourselves in offering budget-friendly accommodations that don't compromise on comfort or authenticity. 
             Immerse yourself in local culture while enjoying modern amenities in our welcoming homestay properties.
           </p>
