--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
       <!-- Footer -->
       <footer>
-        <p>© 2024 Happy Travels. All rights reserved.</p>
+        <p>© 2024 Tirupati Happy Travels. All rights reserved.</p>
       </footer>
     </div>
     <script>
